<?xml version="1.0"?>
<package format="3">
  <name>hajime_walk_teleop</name>
  <version>0.0.0</version>
  <description>The hajime_walk_teleop package</description>
  <maintainer email="supratmanjoshua@gmail.com">jsupratman13</maintainer>

  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>hajime_walk_msgs</depend>
  <depend>joy</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export/>
</package>
